feat: enhance text selection and overlay functionality in App.tsx
- Introduced new state variables to manage text selection replacement and overlay scrolling for improved user experience.
- Implemented mobile and desktop textarea references to synchronize scrolling between the text area and overlay.
- Added functionality to capture text selection and replace it during transcription, enhancing note editing capabilities.
- Updated package dependencies to include Capacitor for better mobile support and added build scripts for Android.

--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:android": "vite build && npx cap sync android",
+    "open:android": "npx cap open android"
   },
   "dependencies": {
+    "@capacitor/android": "^6.2.1",
+    "@capacitor/core": "^6.1.2",
     "@google/genai": "^1.38.0",
     "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.563.0",
@@ -16,6 +20,7 @@
     "react-dom": "^19.2.4"
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.1.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
